--- a/SampleMultiview/Storyboard.storyboard
+++ b/SampleMultiview/Storyboard.storyboard
@@ -335,10 +335,13 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <connections>
+                        <outlet property="pickerView" destination="eNY-Pv-kJq" id="DGy-Ck-KnX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="edF-ER-wwP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-536" y="62"/>
+            <point key="canvasLocation" x="-599" y="62"/>
         </scene>
         <!--Edit Name View Controller-->
         <scene sceneID="lqo-hp-3pg">
@@ -360,10 +363,39 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <connections>
+                        <outlet property="pickerView" destination="WOM-yV-CYy" id="O0i-VY-bph"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BW7-km-DJ7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-599" y="431"/>
+            <point key="canvasLocation" x="-599" y="400"/>
+        </scene>
+        <!--Edit Rep View Controller-->
+        <scene sceneID="r4F-mc-Glw">
+            <objects>
+                <viewController id="U0W-6S-Mnl" customClass="EditRepViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="1yA-n1-9KW">
+                        <rect key="frame" x="0.0" y="20" width="268" height="216"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <pickerView contentMode="scaleToFill" id="ttR-Mw-PhW">
+                                <rect key="frame" x="0.0" y="0.0" width="268" height="216"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="U0W-6S-Mnl" id="XoE-0A-sIW"/>
+                                    <outlet property="delegate" destination="U0W-6S-Mnl" id="e8E-lc-z6O"/>
+                                </connections>
+                            </pickerView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    </view>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="x8h-oM-Eyc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-174" y="100"/>
         </scene>
         <!--Exercise View Controller-->
         <scene sceneID="QcM-bn-2gg">
@@ -377,34 +409,34 @@
                                 <rect key="frame" x="0.0" y="0.0" width="1024" height="704"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="71" sectionHeaderHeight="22" sectionFooterHeight="22" id="xcW-NM-DaJ">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="151" sectionHeaderHeight="22" sectionFooterHeight="22" id="xcW-NM-DaJ">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="661"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" red="0.100645727" green="0.100645727" blue="0.100645727" alpha="0.80000000000000004" colorSpace="calibratedRGB"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" reuseIdentifier="exerciseCell" rowHeight="71" id="Xbx-zI-ek6" customClass="NormalExerciseCell">
-                                        <rect key="frame" x="0.0" y="22" width="320" height="71"/>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" reuseIdentifier="exerciseCell" rowHeight="151" id="Xbx-zI-ek6" customClass="NormalExerciseCell">
+                                        <rect key="frame" x="0.0" y="22" width="320" height="151"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Exercise" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="jAb-fK-vzi">
-                                                    <rect key="frame" x="224" y="12" width="91" height="45"/>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Exercise" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="jAb-fK-vzi">
+                                                    <rect key="frame" x="143" y="12" width="172" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <color key="textColor" red="0.43614799540131355" green="0.37359269100228965" blue="0.83163265306122447" alpha="1" colorSpace="calibratedRGB"/>
                                                     <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 </label>
                                                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" id="4e5-Ss-NXg">
-                                                    <rect key="frame" x="13" y="12" width="208" height="45"/>
+                                                    <rect key="frame" x="20" y="41" width="280" height="89"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                                    <color key="backgroundColor" red="0.82326939450275249" green="0.66926396345770378" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                 </scrollView>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
-                                        <color key="backgroundColor" red="0.7726828791886905" green="1" blue="0.99995761143179063" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <connections>
                                             <outlet property="name" destination="jAb-fK-vzi" id="3Ll-zg-qkI"/>
                                             <outlet property="setsScrollView" destination="4e5-Ss-NXg" id="4hM-Xv-yz5"/>
@@ -491,7 +523,7 @@
                                                             <view contentMode="scaleToFill" id="nX4-B0-ZI2" userLabel="Rep container">
                                                                 <rect key="frame" x="20" y="20" width="359" height="139"/>
                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                             </view>
                                                         </subviews>
                                                         <color key="backgroundColor" red="0.48445873447499171" green="0.55102040816326525" blue="0.49686796615468193" alpha="0.48999999999999999" colorSpace="calibratedRGB"/>
@@ -517,6 +549,9 @@
                         <outlet property="tableView" destination="xcW-NM-DaJ" id="SBJ-5j-pKa"/>
                         <outlet property="weightLabel" destination="X77-Iw-CAQ" id="d3a-hb-pVw"/>
                         <segue destination="yMz-c6-lXo" kind="modal" identifier="loadProgram" modalPresentationStyle="formSheet" id="RNa-se-r7c"/>
+                        <segue destination="U0W-6S-Mnl" kind="popover" identifier="editRep" popoverAnchorView="nX4-B0-ZI2" id="eEX-h5-tML">
+                            <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                        </segue>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="36b-EY-YON" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -535,7 +570,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="-1847" y="-726"/>
+            <point key="canvasLocation" x="-1854" y="-726"/>
         </scene>
         <!--Load Program View Controller-->
         <scene sceneID="WHi-wq-eRZ">
